Fix overlay issue on mobile

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ ul li {
   /* border: red 2px solid; */
   position: absolute;
   z-index: 1;
-  top: 30%;
+  top: 25%;
   padding-left: 50vh;
   padding-right: 50vh;
 }
@@ -253,6 +253,8 @@ ul li {
   padding-right: 10px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
+  text-justify: center;
 }
 
 .blog-posts .post {
@@ -458,8 +460,8 @@ textarea::-webkit-scrollbar-thumb {
   }
 
   .dark-overlay {
-    width: 100vw;
-    height: 100vh;
+    width: 0;
+    height: 0;
     background-color: rgba(0, 0, 0, 0);
     position: fixed;
     transition: background-color 250ms;
@@ -467,6 +469,8 @@ textarea::-webkit-scrollbar-thumb {
 
   .dark-overlay-on {
     background-color: rgba(0, 0, 0, 0.7);
+    width: 100vw;
+    height: 100vh;
     /* position: fixed; */
   }
 
